# ddpi

./: .gitignore  README.md
doc/port_events/: destination_changed_event.md  draught_changed_event.md  nav_status_changed_event.md  no_course_over_ground_changed_event.md  no_course_over_ground_event.md  no_drift_event.md  no_movement_event.md  no_rate_of_turn_event.md  no_speed_over_ground_event.md
src/polars_plugin/polars_h3/: Cargo.toml  Makefile  run.py
src/polars_plugin/polars_h3/polars_h3/src/: lib.rs
src/polars_plugin/polars_h3/src/: lib.rs  parallel_h3_mod.rs
src/port_detection/: event_extraction.py
